# advent-rust

./: .gitignore  Cargo.toml  day.template  generate_day.sh  rustfmt.toml
.github/: cargo-test.sh
.github/workflows/: rust.yml
2021/: Cargo.toml
2022/: Cargo.toml
2023/: Cargo.toml
2023/input/: day10_example5.txt  day8_example3.txt
2024/: Cargo.toml
2025/: .gitignore  Cargo.toml  rustfmt.toml
2025/input/: day10_first25.txt  day10_line54.txt  day11_example2.txt  day9_simple.txt
macros/: Cargo.toml
macros/src/: derive_from_repo.rs  derive_from_repr.rs  lib.rs  parser.rs
shared/: Cargo.toml
shared/src/: builder.rs  convert.rs  day.rs  direction.rs  disjoint_set.rs  geometry.rs  graph_utils.rs  grid.rs  iter_utils.rs  key.rs  lib.rs  linear_solver.rs  lines.rs  math.rs  numbers.rs  parsing.rs  rgb.rs  search.rs  small_string.rs  test_utils.rs  traits.rs  vec2.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  grid.rs  iter_utils.rs  main.rs  search.rs
