[package]
name = "advent-rust-2021"
version = "0.1.0"
edition = "2021"

[dependencies]
advent-lib = { path = "../shared" }
advent-macros = { path = "../macros" }
bit-set = "0.8.0"
fxhash = "0.2.1"
memoize = "0.5"
nom = "8"
nom-parse-trait = "0.4.0"
nom-parse-macros = "0.4.0"
rayon = "1.10.0"
smallvec = "1"

[profile.release]
# strip = true
# lto = true
# panic = "abort"
# debug = "none"
debug = true
