[package]
name = "advent-rust-2022"
version = "0.1.0"
edition = "2024"

[dependencies]
advent-lib = { path = "../shared" }
advent-macros = { path = "../macros" }
bit-set = "0.8.0"
fxhash = "0.2.1"
nom = "8"
nom-parse-trait = "0.4.1"
nom-parse-macros = "0.4.2"
rayon = "1.10.0"

[profile.release]
strip = true
lto = true
panic = "abort"
debug = "none"
