[package]
name = "advent-rust-2024"
version = "0.1.0"
edition = "2024"

[features]
debug_print = []
generate_image = []

[dependencies]
advent-lib = { path = "../shared" }
advent-macros = { path = "../macros" }
bit-set = "0.8.0"
rayon = "1"
itertools = "0.14.0"
nom = "8"
nom-parse-trait = "0.4.1"
nom-parse-macros = "0.4.2"
fxhash = "0.2"
smallvec = "1"

[profile.release]
strip = true
lto = true
panic = "abort"
debug = "none"
